--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 		<link rel="stylesheet" href="assets/style.css">
 	</head>
 	<body>
-		<input type="text" id="inputBox" value="" placeholder="pin" maxlength = "40" onkeypress="handleInput(event)">
-		<div id="uibox">
-			<span class="ui" id="northtext">0.0</span>
-			<span class="ui" id="northsymbol">°lo</span>
-			<span class="ui" id="easttext">0.0</span>
-			<span class="ui" id="eastsymbol">°la</span>
+		<div id="main">
+			<input type="text" id="inputBox" value="" placeholder="pin" maxlength = "40" onkeypress="handleInput(event)">
+			<div id="canvasParent"></div>
+			<div id="uibox">
+				<span class="ui" id="northtext">0.0</span>
+				<span class="ui" id="northsymbol">°lo</span>
+				<span class="ui" id="easttext">0.0</span>
+				<span class="ui" id="eastsymbol">°la</span>
+			</div>
 		</div>
 	</body>
 </html>
