--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+		<script src="scripts/biome.js"></script>
 		<script src="scripts/point.js"></script>
 		<script src="scripts/grid.js"></script>
 		<script src="scripts/story.js"></script>
