small refactor, biome work

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 		<link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+
+		<script src="scripts/helpers.js"></script>
 		<script src="scripts/biome.js"></script>
 		<script src="scripts/point.js"></script>
 		<script src="scripts/grid.js"></script>
 		<script src="scripts/story.js"></script>
+
+		<script src="scripts/init.js"></script>
 		<script src="scripts/main.js"></script>
+		
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
 		<link rel="stylesheet" href="assets/style.css">
 	</head>
