fix origin rendering issue, add icon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Comfortaa:400,600" rel="stylesheet">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+		<link rel='icon' href='http://exp.v-os.ca/cartographer/assets/cartographer.ico' type='image/x-icon'>
 
 		<script src="scripts/helpers.js"></script>
 		<script src="scripts/biome.js"></script>
