--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<link rel="stylesheet" href="assets/style.css">
 	</head>
 	<body>
+		<a id="root" href="https://v-os.ca/cartographer">cartographer</a>
 		<div id="main">
 			<input type="text" id="inputBox" value="" placeholder="pin" maxlength = "40" onkeypress="handleInput(event)">
 			<div id="canvasParent"></div>
