--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
 		<link rel='icon' href='http://exp.v-os.ca/cartographer/assets/cartographer.ico' type='image/x-icon'>
 
-		<script src="scripts/helpers.js"></script>
-		<script src="scripts/biome.js"></script>
-		<script src="scripts/point.js"></script>
-		<script src="scripts/grid.js"></script>
-		<script src="scripts/story.js"></script>
+		<script src="scripts/private/helpers.js"></script>
+		<script src="scripts/private/biome.js"></script>
+		<script src="scripts/private/point.js"></script>
+		<script src="scripts/private/grid.js"></script>
+		<script src="scripts/private/story.js"></script>
 
-		<script src="scripts/init.js"></script>
-		<script src="scripts/main.js"></script>
+		<script src="scripts/private/init.js"></script>
+		<script src="scripts/private/main.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
 		<link rel="stylesheet" href="assets/style.css">
