--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
 	</head>
 	<body>
 		<a id="root" href="https://v-os.ca/cartographer">cartographer</a>
-		<div id="main">
+		<div id="inputBoxHolder">
 			<input type="text" id="inputBox" value="" placeholder="pin" maxlength = "40" onkeypress="handleInput(event)">
+		</div>
+		<div id="main">
 			<div id="canvasParent"></div>
-			<div id="uibox">
-				<span class="ui" id="northtext">0.0</span>
-				<span class="ui" id="northsymbol">°lo</span>
-				<span class="ui" id="easttext">0.0</span>
-				<span class="ui" id="eastsymbol">°la</span>
-			</div>
+		</div>
+		<div id="uibox">
+			<span class="ui" id="northtext">0.0</span>
+			<span class="ui" id="northsymbol">°lo</span>
+			<span class="ui" id="easttext">0.0</span>
+			<span class="ui" id="eastsymbol">°la</span>
 		</div>
 	</body>
 </html>
